--- a/Ensemble.ipynb
+++ b/Ensemble.ipynb
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
     "svr = SVR(kernel='linear')\n",
     "svr.fit(X_train, y_train)\n",
     "\n",
-    "filename = 'models/svm_model_' + str(len(X_train)) + '.sav'\n",
+    "filename = 'svm_model_' + str(len(X_train)) + '.sav'\n",
     "joblib.dump(svr, filename)\n",
     "\n",
     "svm_pred = svr.predict(X_val)\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
    "source": [
     "reg = LinearRegression().fit(X_train, y_train)\n",
     "\n",
-    "filename = 'models/reg_model_' + str(len(X_train)) + '.sav'\n",
+    "filename = 'reg_model_' + str(len(X_train)) + '.sav'\n",
     "joblib.dump(reg, filename)\n",
     "\n",
     "reg_pred = reg.predict(X_val)\n",
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -649,11 +649,52 @@
     "rf = RandomForestClassifier(random_state=0, n_estimators=1000)\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "filename = 'models/rf_model_' + str(len(X_train)) + '.sav'\n",
+    "filename = 'rf_model_' + str(len(X_train)) + '.sav'\n",
     "joblib.dump(rf, filename)\n",
     "\n",
     "rf_pred = rf.predict(X_val)\n",
     "print(rf_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_SVM(X_train, y_train):\n",
+    "    return SVR(kernel='linear').fit(X_train, y_train)\n",
+    "\n",
+    "def get_Reg(X_train, y_train):\n",
+    "    return LinearRegression().fit(X_train, y_train)\n",
+    "\n",
+    "def get_RF(X_train, y_train, n_estimators=100, random_state=0):\n",
+    "    return RandomForestClassifier(random_state=random_state, n_estimators=n_estimators).fit(X_train, y_train)\n",
+    "\n",
+    "def make_models(X,y):\n",
+    "    models = []\n",
+    "    models.append(get_SVM(X_train, y_train))\n",
+    "    models.append(get_Reg(X_train, y_train))\n",
+    "    models.append(get_RF(X_train, y_train))\n",
+    "    return models\n",
+    "\n",
+    "def make_prediction(models,X_val):\n",
+    "    predictions = []\n",
+    "    model_predictions = []\n",
+    "    for j in range(len(models)):\n",
+    "        model = models[j]\n",
+    "        model_predictions.append(model.predict(X_val).tolist())\n",
+    "    return np.array(pd.DataFrame(model_predictions).mean().values.flat)\n",
+    "\n",
+    "models = make_models(X_train,y_train)\n",
+    "preds = make_prediction(models,X_val)"
    ]
   },
   {
@@ -665,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,17 +750,19 @@
     "pred_df['svm_pred_answer_score'] = svm_pred\n",
     "pred_df['reg_pred_answer_score'] = reg_pred\n",
     "pred_df['rf_pred_answer_score'] = rf_pred\n",
+    "pred_df['ensemble_pred_answer_score'] = preds\n",
     "\n",
     "# Convert predicted answer_score to predicted rankings\n",
     "pred_df['answer_rank'] = pred_df.groupby('question_id')['answer_score'].rank(ascending=False)\n",
     "pred_df['svm_pred_rank'] = pred_df.groupby('question_id')['svm_pred_answer_score'].rank(ascending=False)\n",
     "pred_df['reg_pred_rank'] = pred_df.groupby('question_id')['reg_pred_answer_score'].rank(ascending=False)\n",
-    "pred_df['rf_pred_rank'] = pred_df.groupby('question_id')['rf_pred_answer_score'].rank(ascending=False)"
+    "pred_df['rf_pred_rank'] = pred_df.groupby('question_id')['rf_pred_answer_score'].rank(ascending=False)\n",
+    "pred_df['ensemble_pred_rank'] = pred_df.groupby('question_id')['ensemble_pred_answer_score'].rank(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +771,8 @@
      "text": [
       "svm_pred_answer_score Avg Correlation Per Question: 0.4913708143219172\n",
       "reg_pred_answer_score Avg Correlation Per Question: 0.4315530314889336\n",
-      "rf_pred_answer_score Avg Correlation Per Question: 0.4499857383469573\n"
+      "rf_pred_answer_score Avg Correlation Per Question: 0.4499857383469573\n",
+      "ensemble_pred_answer_score Avg Correlation Per Question: 0.46358743862428786\n"
      ]
     }
    ],
@@ -738,7 +782,7 @@
     "def get_metric(pred_answer_score, answer_score):\n",
     "    return mstats.spearmanr(pred_answer_score, answer_score, use_ties=True).correlation\n",
     "\n",
-    "models = {'svm_pred_answer_score': [], 'reg_pred_answer_score': [], 'rf_pred_answer_score': []}\n",
+    "models = {'svm_pred_answer_score': [], 'reg_pred_answer_score': [], 'rf_pred_answer_score': [], 'ensemble_pred_answer_score': []}\n",
     "for model_answer_score in models.keys():\n",
     "    for question_id in pred_df['question_id'].unique():\n",
     "        mask = (pred_df['question_id'] == question_id)\n",
@@ -759,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +812,8 @@
      "text": [
       "svm_pred_rank_exact 0.6484149855907781\n",
       "reg_pred_rank_exact 0.6051873198847262\n",
-      "rf_pred_rank_exact 0.590778097982709\n"
+      "rf_pred_rank_exact 0.590778097982709\n",
+      "ensemble_pred_rank_exact 0.6340057636887608\n"
      ]
     }
    ],
@@ -777,9 +822,11 @@
     "svm_pred_rank_exact = pred_df[pred_df['svm_pred_rank'] == 1]\n",
     "reg_pred_rank_exact = pred_df[pred_df['reg_pred_rank'] == 1]\n",
     "rf_pred_rank_exact = pred_df[pred_df['rf_pred_rank'] == 1]\n",
+    "ensemble_pred_rank_exact = pred_df[pred_df['ensemble_pred_rank'] == 1]\n",
     "print('svm_pred_rank_exact', len(answer_rank.merge(svm_pred_rank_exact, how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))\n",
     "print('reg_pred_rank_exact', len(answer_rank.merge(reg_pred_rank_exact, how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))\n",
-    "print('rf_pred_rank_exact', len(answer_rank.merge(rf_pred_rank_exact, how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))"
+    "print('rf_pred_rank_exact', len(answer_rank.merge(rf_pred_rank_exact, how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))\n",
+    "print('ensemble_pred_rank_exact', len(answer_rank.merge(ensemble_pred_rank_exact, how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))"
    ]
   },
   {
@@ -791,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +847,8 @@
      "text": [
       "svm_pred_rank_exact 0.8357348703170029\n",
       "reg_pred_rank_exact 0.8357348703170029\n",
-      "rf_pred_rank_exact 0.8155619596541787\n"
+      "rf_pred_rank_exact 0.8155619596541787\n",
+      "ensemble_pred_rank_exact 0.8357348703170029\n"
      ]
     }
    ],
@@ -808,17 +856,12 @@
     "pred_df['svm_top_3'] = pred_df['svm_pred_rank'].apply(lambda row: int(row < 4))\n",
     "pred_df['reg_top_3'] = pred_df['reg_pred_rank'].apply(lambda row: int(row < 4))\n",
     "pred_df['rf_top_3'] = pred_df['rf_pred_rank'].apply(lambda row: int(row < 4))\n",
+    "pred_df['ensemble_top_3'] = pred_df['ensemble_pred_rank'].apply(lambda row: int(row < 4))\n",
     "\n",
     "print('svm_pred_rank_exact', len(answer_rank.merge(pred_df[pred_df['svm_top_3'] == 1], how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))\n",
     "print('reg_pred_rank_exact', len(answer_rank.merge(pred_df[pred_df['reg_top_3'] == 1], how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))\n",
-    "print('rf_pred_rank_exact', len(answer_rank.merge(pred_df[pred_df['rf_top_3'] == 1], how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Of all questions, what proportion of best answers are predicted correctly if the ranks are randomly assigned?**"
+    "print('rf_pred_rank_exact', len(answer_rank.merge(pred_df[pred_df['rf_top_3'] == 1], how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))\n",
+    "print('ensemble_pred_rank_exact', len(answer_rank.merge(pred_df[pred_df['ensemble_top_3'] == 1], how='inner', on='answer_id')) / len(pred_df['question_id'].unique()))"
    ]
   },
   {
@@ -826,19 +869,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "prop = 0\n",
-    "for i in range(5):\n",
-    "    random.seed(i)\n",
-    "    num_answers = pred_df['question_id'].value_counts()\n",
-    "    pred_df['rand_rank'] = pred_df['question_id'].apply(lambda x: random.randint(1, num_answers[x])) \n",
-    "\n",
-    "    rand_rank = pred_df[pred_df['rand_rank'] == 1]\n",
-    "    prop += len(answer_rank.merge(rand_rank, how='inner', on='answer_id')) / len(pred_df['question_id'].unique())\n",
-    "    \n",
-    "prop /= 5\n",
-    "prop"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -857,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
